delete MzLibAgent [ci skip]